# swap_test

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
lib/include/Swap/: Buffer.h  Chunk.h  File.h  Folder.h  Item.h  Medium.h  Status.h
lib/source/: Buffer.cpp  Folder.cpp  Item.cpp  Medium.cpp
tests/: CMakeLists.txt
tests/swap_test/: CMakeLists.txt  CustomRate.cpp  CustomRate.h  main.cpp
